--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@ pandas
 plotly
 investpy
 pandas_datareader
+tensorflow
+tensorflow.keras.models
+tensorflow.keras.layers
+sklearn
+sklearn.model_selection
+numpy
+random
+os
+time
+matplotlib
+yahoo_fin
