Fix requirements dependencies due to a error in yfinance package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-yfinance==0.1.55
 streamlit==0.76.0
 pandas==1.2.1
 plotly==4.14.3
+click==8.0.4
+-i https://pypi.anaconda.org/ranaroussi/simple yfinance
+
